[project]
name = "h445lib2"
version = "0.1.0"
description = "python analysis code for h445-2 experiment"
readme = "README.md"
authors = [
    { name = "FumiHubCNS", email = "fendo@cns.s.u-tokyo.ac.jp" }
]
requires-python = ">=3.13"
dependencies = [
    "catmlib",
]

[project.scripts]
h445lib2 = "h445lib2:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
catmlib = { git = "https://github.com/FumiHubCNS/catm-python-lib.git", rev = "main"}
